fix main is truncated on top

--- a/sources/styles/commons/shared/_main.scss
+++ b/sources/styles/commons/shared/_main.scss
@@ -17,10 +17,14 @@ img {
 main {
   max-width: 100%;
   padding-bottom: 20px;
+  padding-top: 50px;
+
+  @include breakpoint($b-large) {
+    padding-top: 70px;
+  }
   
   &.author-page__base {
     background-color: #f7f4f4;
-    padding-top: 50px;
 
     @include breakpoint($b-large) {
       padding-top: 90px;
